# external_sqlite

./: .gitmodules  .travis.yml  CMakeLists.txt  Makefile-amd64_linux_clang  Makefile-ios_i386_clang  Makefile-linux_amd64_clang  Makefile-linux_armv6rpi_gcc  Makefile-macosx_amd64_clang  Makefile-windows_amd64_msvc  README.md  appveyor.yml
manifests/: manifest
resources/: Makefile-alpine_amd64_gcc  Makefile-android_i386_gcc  Makefile-ios_i386_clang  Makefile-linux_amd64_clang  Makefile-linux_armcortexa7_gcc  Makefile-linux_armv6rpi_gcc  Makefile-linux_i386_gcc  Makefile-macosx_amd64_clang  Makefile-windows_amd64_msvc  Makefile-windows_i386_msvc
resources/sqlite_315_cmake/: CMakeLists.txt
resources/windows/: Makefile.msc
test/: CMakeLists.txt  sqlite_test.cpp
